<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/name"
            app:srcCompat="@drawable/ic_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_name"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText" />

            <TextView
                android:id="@+id/name_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/description" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/phone_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/phone_number"
            app:srcCompat="@drawable/ic_phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/default_phone"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText" />

            <TextView
                android:id="@+id/phoneNumber_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/description" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/email_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/email"
            app:srcCompat="@drawable/ic_email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_email"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText" />

            <TextView
                android:id="@+id/email_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/description" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ImageView
            android:id="@+id/location_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/delivery"
            app:srcCompat="@drawable/ic_location" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deliveryAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/delivery_desc"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText" />

            <TextView
                android:id="@+id/deliveryAddress_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/description" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/description_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="top"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/ic_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/desc_desc"
                android:maxLines="20"
                android:textColor="@color/colorText"
                android:textSize="@dimen/normalText" />

            <TextView
                android:id="@+id/description_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/description"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/description" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>